--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sims-ppob-yazid",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api-doc-tht.nutech-integrasi.com",
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
@@ -13,7 +14,9 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "redux-thunk": "^3.1.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
